Correção layout barbearia + ajuste das index

--- a/barbearia/style.css
+++ b/barbearia/style.css
@@ -1,198 +1,265 @@
-body{
-    background-color: #F4F5F6;
-    font-family: 'Montserrat', sans-serif;
+body {
+	font-family: 'Montserrat', sans-serif;
 }
-header{
-    background-color: #BBBBBB;
-    padding: 20px 0;
+
+header {
+	background: #BBBBBB;
+	padding: 20px 0;
 }
-.caixa{
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
+
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
 }
-nav{
-    position: absolute;
-    top: 110px;
-    right: 0;
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
 }
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
+
+nav li {
+	display: inline;
+	margin: 0 0 0 15px;
 }
-nav a{
-    text-transform: uppercase;
-    color: black;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
+
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
 }
-nav a:hover{
-    color:  rgb(209, 141, 14); 
+
+nav a:hover {
+	color: #C78C19;
+	text-decoration: underline;
 }
-.produtos{
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px 0;
+
+.produtos {
+	width: 940px;
+	margin: 0 auto;
+	padding: 50px 0;
 }
-.produtos li{
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    margin:  0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid black;
-    border-radius: 10px;
+
+.produtos li {
+	display: inline-block;
+	text-align: center;
+	width: 30%;
+	vertical-align: top;
+	margin: 0 1.5%;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border: 2px solid #000000;
+	border-radius: 10px;
 }
-.produtos li:hover{
-    border-color:#FF643F;
+
+.produtos li:hover {
+	border-color: #C78C19;
 }
-.produtos li:active{
-    border-color:#FF643F; 
+
+.produtos li:active {
+	border-color: #088C19;	
 }
-.produtos li:hover h2{
-    font-size: 34px;
+
+.produtos li:hover h2 {
+	font-size: 34px;
 }
-.produtos h2{
-    font-size: 30px;
-    font-weight: bold;
+
+.produtos h2 {
+	font-size: 30px;
+	font-weight: bold;
 }
-.descricao{
-    font-size: 18px;
+
+.produto-descricao {
+	font-size: 18px;
 }
-.preco{
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 10px;
+
+.produto-preco {
+	font-size: 22px;
+	font-weight: bold;
+	margin-top: 10px;
 }
-footer{
-    background: url(assets/images/bg.jpg);
-    text-align: center;
-    padding: 40px 0;
+
+footer {
+	text-align: center;
+	background: url("assets/images/bg.jpg");
+	padding: 40px 0;
 }
-.copyright{
-    color: aliceblue;
-    font-size: 13px;
-    margin: 20px 0 0;
+
+.copyright {
+	color: #FFFFFF;
+	font-size: 13px;
+	margin: 20px 0 0;
 }
-form{
-    margin: 40px 0;
+form {
+	margin: 40px 0;
 }
-form label, form legend{
-    display: block;
-    font-size: 20px;
-    margin: 0 0 10px;
+
+form label, form legend {
+	display:block;
+	font-size: 20px;
+	margin: 0 0 10px;
 }
-.input-padrao{
+
+.input-padrao {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
 	width: 50%;
-    border: 2px solid #dfe9f3;
-    background: #FFFFFF;
-    border-radius: 5px;
+}
 
+.checkbox {
+	margin: 20px 0;
 }
-.checkbox{
-    margin: 20px 0;
+
+.enviar {
+	width:40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
 }
-.enviar{
-    width: 40%;
-    padding: 15px 0;
-    background-color: #FF643F;
-    color: aliceblue;
-    font-size: 18px;
-    border: none;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: 1s all;
-    cursor: pointer;
+
+.enviar:hover {
+	background: darkorange;
+	transform: scale(1.2);
 }
-.enviar:hover{
-    background:orangered; 
-    transform: scale(1.2);
+
+table {
+	margin: 20px 0 40px;
 }
-table{
-    margin: 20px 0 40px;
+
+thead {
+	background: #555555;
+	color: white;
+	font-weight: bold;
 }
-thead{
-    background: #a5a2a2;
-    color: aliceblue;
-    font-weight: bold;
+
+td, th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
-td,th{
-    border: 2px solid #dfe9f3;
-    padding: 8px 15px;
+
+
+/* css da página inicial */
+.banner {
+	width:100%;
 }
-/*css da página inicial, refazer para padronizar*/
-.banner{
-    width: 100%;
-    height: 100px;
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
 }
-.titulo-principal{
-    text-align: center;
-    font-size: 2em; /* 2vezes o tamanho base*/
-    margin: 0 0 1em;
-    clear: left;
+
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
 }
-.principal{
-    padding: 3em 0;
-    background: #FEFEFE;
-    width: 940px;
-    margin: 0 auto;
+
+.principal p {
+	margin: 0 0 1em;
 }
-.principal p{
-    margin: 0 0 1em;
+
+.principal strong {
+	font-weight: bold;
 }
-.principal strong{
-    font-weight: bold;
+
+.principal em {
+	font-style: italic;
 }
-.principal em{
-    font-style: italic;
-}
-.utensilios{
-    width: 150px;
-    border-radius: 20px;
-    float: left;
-    margin: 0 20px 20px 0;
-}
-.mapa {
-    padding: 3em 0;
-}
-.iframe-mapa{
-    width: 940px;
-    margin: 0 auto;
-}
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
-}
-.beneficios{
-    padding: 3em 0;
-    background: linear-gradient(#FEFEFE,#888888);
-}
-.conteudo-beneficios{
-    width: 640px;
-    margin: 0 auto;
-}
-.lista-beneficios{
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
-.itens{
-    line-height: 1.5;
-}
-.itens:first-child{
-    font-weight: bold;
-}
-.imagembeneficios{
-    width: 60%;
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
     border-radius:20px;
 }
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.itens:before {
+	content: "🟊";
+}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+    border-radius:20px;
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
+}
+
 .video {
-    width: 560px;
-    margin: 2em auto;
+	width: 560px;
+	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}
+
+	.lista-beneficios, .imagem-beneficios {
+		width: 100%;
+	}
 }
