--- a/style.css
+++ b/style.css
@@ -10,3 +10,20 @@ nav li{
     display: inline-block;
     padding: 20px;
 }
+.projetos{
+    width: 10px auto;
+    height: 0 auto;
+    background-color: beige;
+    padding: 200px;
+}
+.projetos li{
+    display: inline-block;
+    padding: 10px;
+    margin: 20px;
+    height: 90px;
+    width: 300px;
+}
+footer{
+    text-align: center;
+    padding-top: 50px;
+}
